--- a/django-install.yml
+++ b/django-install.yml
@@ -1,14 +1,31 @@
 ---
 # Install and configure Django CMS
 
+- name: Create Django Group
+  sudo: yes
+  group: name=django state=present
+  
+- name: Create Django User
+  sudo: yes
+  user: name=django groups=django
+  
 - name: Install python pip
+  sudo: yes
   apt: pkg=python-pip state=installed update_cache=true
   
 - name: Install virtualenv
-  pip: name=virtualenv state=present
+  sudo: yes
+  apt: name=python-virtualenv state=present update_cache=true
 
 - name: Install virtualenv wrapper
-  pip: name=virtualenv-wrapper state=present virtualenv="{{ release_venv }}"
+  sudo: yes
+  apt: name=virtualenvwrapper state=present update_cache=true
+
+- name: Create virtualenv
+  shell: virtualenv env
   
 - name: Install Django
-  pip: name=django state=present virtualenv="{{ release_venv }}"
+  pip: name=django virtualenv=/home/django/django-env
+  
+- name: Install Django CMS
+  pip: name=django-cms virtualenv=/home/django/django-cms-env
